fixed responsiveness for mobile

--- a/styles.css
+++ b/styles.css
@@ -83,9 +83,8 @@ footer {
   padding: 48px 0;
 }
 
-#about{
+#about {
   background-color: #f8ffdc;
-
 }
 
 h2 {
@@ -112,15 +111,14 @@ img {
 }
 
 .about__img--wrapper,
-.section__description--wrapper{
-    padding: 0 24px;
+.section__description--wrapper {
+  padding: 0 24px;
 }
 
 .section__description--para {
   font-size: 20px;
   line-height: 1.5;
   margin-bottom: 24px;
-
 }
 
 /*
@@ -133,6 +131,32 @@ DISCORD
   background-color: #cefeff;
 }
 
+/*
+
+CONTACT
+
+
+*/
+
+#contact {
+  background-color: #abadf8;
+}
+
+form {
+  width: 100%;
+  max-width: 600px;
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  padding: 0 24px;
+}
+
+input,
+textarea {
+  margin-bottom: 24px;
+  font-size: 20px;
+  padding: 6px 12px;
+}
 
 /*
 
@@ -141,54 +165,88 @@ CONTACT
 
 */
 
-#contact{
-    background-color: #abadf8;
-
+footer {
+  background-color: #aaf5ff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-form{
-    width: 100%;
-    max-width: 600px;
-    display: flex;
+.footer__logo {
+  max-width: 480px;
+  margin-bottom: 16px;
+}
+
+.footer__links {
+  margin-bottom: 32px;
+}
+
+.footer__link {
+  padding: 0 16px;
+}
+
+/*SMALL PHONES, TABLETS, LARGE SMARTPHONES */
+@media (max-width: 728px) {
+  .row {
     flex-direction: column;
-    margin: 0 auto;
+  }
 
-}
-
-input, textarea{
+  .home__description {
     margin-bottom: 24px;
-    font-size: 20px;
-    padding: 6px 12px;
-
-}
-
-
-/*
-
-CONTACT
-
-
-*/
-
-
-footer{
-    background-color: #aaf5ff;
     display: flex;
     flex-direction: column;
     align-items: center;
-}
+  }
 
-.footer__logo{
-    max-width: 480px;
-    margin-bottom: 16px;
-}
+  .home__description--button {
+    max-width: 240px;
+  }
+
+  h1 {
+    text-align: center;
+    font-size: 60px;
+  }
+
+  .subheader {
+    text-align: center;
+    font-size: 28px;
+  }
+
+  ul {
+    display: none;
+  }
+
+  .section__description {
+    flex-direction: column;
+  }
+
+  .section__description--wrapper {
+    width: 100%;
+  }
+
+  .about__img--wrapper {
+    width: 100%;
+  }
+
+  #discord .section__description {
+    flex-direction: column-reverse;
+  }
+
+  footer {
+    padding: 48px 24px;
+  }
+
+  .footer__logo {
+    max-width: 360px;
+  }
+
+  .footer__link{
+    padding: 0 4px;
+    font-size: 18px;
+
+  }
 
 .footer__links{
-    margin-bottom: 32px;
-
+    margin-bottom: 24px;
 }
-
-.footer__link{
-    padding: 0 16px;
-
 }
